--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <DECTYPE html>
 <img>src=‘229BDCA3-2770-4096-BA70-4F650CF4BD81.png’
-style=“width:20px:height:50px;”
+style=“width:20px:height:50px;”</img>
